<resources>
    <string name="app_name">Weather Reporting</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_out">SIGN OUT</string>
    <string-array name="languages">
        <item> English </item>
        <item> Telugu </item>
    </string-array>
</resources>
